--- a/01-Tinder-Swipe/index.html
+++ b/01-Tinder-Swipe/index.html
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="./styles/index.css">
 
+
 <title>Tinder Swipe</title>
 
 <main>
@@ -25,6 +26,11 @@
                 <div class="choice like">LIKE</div>
             </article>
 
+            <span>
+                No more persons around you... <br />
+                Try again later
+            </span>
+
 
         </div>
 
@@ -39,3 +45,5 @@
 
     </section>
 </main>
+
+<script src="./script/script.js"></script>
