--- a/01-Tinder-Swipe/index.html
+++ b/01-Tinder-Swipe/index.html
@@ -1,49 +1,46 @@
 <link rel="stylesheet" href="./styles/index.css">
 
-
 <title>Tinder Swipe</title>
-
+<div class="shadow">
 <main>
-    <section>
-        <header>
-            <img src="./photos/tinder-logo.webp" alt="Tinder Logo">
-        </header>
+  <section>
+    <div class="white-bkg"></div>
+    <header>
+      <img src="./photos/tinder-logo.webp" alt="Tinder Logo" />
+    </header>
 
-        <div class="cards">
-            <article>
-                <img src="./photos/2.webp" alt="Alex, brown hair man, 25yo">
-    
-                <h2>Alex <span>25</span> </h2>
-                <div class="choice nope">NOPE</div>
-                <div class="choice like">LIKE</div>
-            </article>
+    <div class="cards">
+      <article>
+        <img src="./photos/2.webp" alt="Álex, brown hair man, 25 years old" />
+        <h2>Álex <span>25</span></h2>
+        <div class="choice nope">NOPE</div>
+        <div class="choice like">LIKE</div>
+      </article>
 
-            <article>
-                <img src="./photos/1.webp" alt="Leyla, redhair woman, 23yo">
-    
-                <h2>Leyla <span>23</span> </h2>
-                <div class="choice nope">NOPE</div>
-                <div class="choice like">LIKE</div>
-            </article>
+      <article>
+        <img src="./photos/1.webp" alt="Leila, redhead, 25 years old" />
+        <h2>Leila <span>27</span></h2>
+        <div class="choice nope">NOPE</div>
+        <div class="choice like">LIKE</div>
+      </article>
 
-            <span>
-                No more persons around you... <br />
-                Try again later
-            </span>
+      <span>
+        No more people around you.<br />
+        Try again later! 
+      </span>
+    </div>
 
-
-        </div>
-
-        <footer>
-            <button class="is-undo" aria-label="undo"></button>
-            <button class="is-remove is-big" aria-label="remove"></button>
-            <button class="is-star" aria-label="star"></button>
-            <button class="is-fav is-big" aria-label="fav"></button>
-            <button class="is-zap" aria-label="zap"></button>
-
-        </footer>
-
-    </section>
+    <footer>
+      <button class="is-undo" aria-label="undo"></button>
+      <button class="is-remove is-big" aria-label="remove"></button>
+      <button id="mi-boton" class="is-star" aria-label="star"></button>
+      <button class="is-fav is-big" aria-label="fav"></button>
+      <button class="is-zap" aria-label="zap"></button>
+    </footer>
+  </section>
 </main>
+</div>
 
 <script src="./script/script.js"></script>
+
+
